# tweet-loader

./: .gitignore  README.md
backend/: .gitignore  .pre-commit-config.yaml  main.py  pyproject.toml
backend/modules/: get_tweets.py
backend/modules/models/: tweet_model.py
client/: package-lock.json  package.json  tailwind.config.js
client/src/: App.js  index.css
client/src/components/: PaginationBox.js  ResultCard.js  Search.js  Title.js
